# symchk

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
symchk/: __init__.py  __main__.py  parallel.py
